fixed bugs, Riposte works in GUI